# cpp-httpd

./: .gitignore  CMakeLists.txt  README.md  lite-http-server.cpp  lite-http-server.hpp
alt-httpd/src/: CMakeLists.txt  alt-httpd.cpp  alt-httpd.hpp  stackTrace.cpp  stackTrace.hpp
alt-httpd/testpoco/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
